--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 </head>
 <body>
 
-
 	<form	name="url_input-form">
 		<textarea id="url_input-area"></textarea>
 		<input type="submit" value="Submit" id="url_submit-btn" class="form_submit-btn">
 	</form>
 
+	<textarea id="url_output-area"></textarea>
 
 
-	
 	
 
 	<script src="/regex.js"></script>
