--- a/index.html
+++ b/index.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="/main.css">
-	<title></title>
-</head>
-<body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" type="text/css" href="/main.css">
+		<link rel="stylesheet" type="text/css" href="/linedTextArea.css">
+		<title></title>
+	</head>
+	<body>
 
-	<form	name="url_input-form">
-		<textarea id="url_input-area"></textarea>
-		<input type="submit" value="Submit" id="url_submit-btn" class="form_submit-btn">
-	</form>
+		<nav>
+			<h1>Regex Generator</h1>
+		</nav>
 
-	<textarea id="url_output-area"></textarea>
+		<div class="url_container">
+			<div class="url_input-container">
+				<div class="textbox_label">
+					<h2>URLS</h2>
+					<h5>Make sure you're URLS are full paths, and seperated by white space</h5>
+				</div>
 
+				<textarea class="lined_textarea" id="url_input-area"></textarea>
+				<input type="submit" value="Submit" id="url_submit-btn" class="form_submit-btn">
+			</div>
 
-	
+			<div class="url_output-container">
+				<div class="textbox_label">
+					<h2>Output</h2>
+				</div>
+				<textarea class="lined_textarea" id="url_output-area"></textarea>
+			</div>
+		</div>
 
-	<script src="/regex.js"></script>
-</body>
+		<script src="/regex.js"></script>
+		<script src="/linedTextarea.js"></script>
+	</body>
 </html>
 
