changed some text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="url_input-container">
 				<div class="textbox_label">
 					<h2>URLS</h2>
-					<h5>Make sure you're URLS are full paths, and seperated by white space</h5>
+					<h5>Make sure you're URLS are full paths, and seperated by white space (that can be spaces or newlines)</h5>
 				</div>
 
 				<textarea class="lined_textarea" id="url_input-area"></textarea>
