--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<title></title>
 	</head>
 	<body>
-
 		<nav>
 			<h1>Regex Generator</h1>
 		</nav>
@@ -18,16 +17,17 @@
 			<div class="url_input-container">
 				<div class="textbox_label">
 					<h2>URLS</h2>
-					<h5>Make sure you're URLS are full paths, and seperated by white space (that can be spaces or newlines)</h5>
+					<div class="label_underline"></div>
 				</div>
 
-				<textarea class="lined_textarea" id="url_input-area"></textarea>
+				<textarea class="lined_textarea" placeholder ="Make sure you're URLS are full paths, and seperated by white space (that can be spaces or newlines)" id="url_input-area"></textarea>
 				<input type="submit" value="Submit" id="url_submit-btn" class="form_submit-btn">
 			</div>
 
 			<div class="url_output-container">
 				<div class="textbox_label">
 					<h2>Output</h2>
+					<div class="label_underline"></div>
 				</div>
 				<textarea class="lined_textarea" id="url_output-area"></textarea>
 			</div>
